<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/InfoPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/infoPeso"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoPeso">

        <RadioButton
            android:id="@+id/Peso1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPeso"
            android:text="@string/peso1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Peso2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPeso"
            android:text="@string/peso2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Peso3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPeso"
            android:text="@string/peso3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Peso4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPeso"
            android:text="@string/peso4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Peso5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPeso"
            android:text="@string/peso5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Peso6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPeso"
            android:text="@string/peso6" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="Btn3"
        android:text="@string/proxima_pergunta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>