<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtividadeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/infoAtividade"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/Atividade1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAtividade"
            android:text="@string/ativiadade1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Atividade2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAtividade"
            android:text="@string/ativiadade2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Atividade3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAtividade"
            android:text="@string/ativiadade3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Atividade4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAtividade"
            android:text="@string/ativiadade4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Atividade5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAtividade"
            android:text="@string/ativiadade5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Atividade6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAtividade"
            android:text="@string/ativiadade6" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/proxima_pergunta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>