<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity">

        <TextView
            android:id="@+id/result_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/o_o"
            android:textColor="#3B4163"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFinish2" />

        <TextView
            android:id="@+id/txtFinish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:text="@string/txt_result"
            android:textColor="#651FFF"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFinish1" />

        <TextView
            android:id="@+id/txtFinish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_thanks"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_output">

        <TextView
            android:id="@+id/txtR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_r1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_r2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtR3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_r3"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtR4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_r4"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtR5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_r5"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtR6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_r6"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txt_info"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
