<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FamiliaActivity">

        <TextView
            android:id="@+id/InfoFml"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/fmlInfo"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoFml">

        <RadioButton
            android:id="@+id/Fml1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFml"
            android:text="@string/fml1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fml2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFml"
            android:text="@string/fml2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fml3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFml"
            android:text="@string/fml3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fml4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFml"
            android:text="@string/fml4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fml5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFml"
            android:text="@string/fml5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fml6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFml"
            android:text="@string/fml6" />
    </RadioGroup>

        <Button
            android:id="@+id/btn_familia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/proxima_pergunta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup7" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>