<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FumoActivity">

        <TextView
            android:id="@+id/info_fumo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/infoFumo"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_fumo">

        <RadioButton
            android:id="@+id/Fumo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFumo"
            android:text="@string/fumo1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fumo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFumo"
            android:text="@string/fumo2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fumo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFumo"
            android:text="@string/fumo3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fumo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFumo"
            android:text="@string/fumo4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fumo5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFumo"
            android:text="@string/fumo5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/Fumo6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickFumo"
            android:text="@string/fumo6" />

    </RadioGroup>

        <Button
            android:id="@+id/btn_fumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/proxima_pergunta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>