<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".IdadeActivity">

        <TextView
            android:id="@+id/InfoIdade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/info_idade"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InfoIdade">

            <RadioButton
                android:id="@+id/Idade1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickIdade"
                android:text="@string/idade1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Idade2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickIdade"
                android:text="@string/idade2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Idade3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickIdade"
                android:text="@string/idade3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Idade4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickIdade"
                android:text="@string/idade4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Idade5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickIdade"
                android:text="@string/idade5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


            <RadioButton
                android:id="@+id/Idade6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickIdade"
                android:text="@string/idade6" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="Btn1"
            android:text="@string/proxima_pergunta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>