<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ColesterolActivity">

        <TextView
            android:id="@+id/InfoColesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/infoColesterol"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InfoColesterol">

            <RadioButton
                android:id="@+id/Colesterol1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickColesterol"
                android:text="@string/colesterol1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Colesterol2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickColesterol"
                android:text="@string/colesterol2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Colesterol3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickColesterol"
                android:text="@string/colesterol3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Colesterol4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickColesterol"
                android:text="@string/colesterol4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Colesterol5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickColesterol"
                android:text="@string/colesterol5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioButton
                android:id="@+id/Colesterol6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickColesterol"
                android:text="@string/colesterol6" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_colesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/proxima_pergunta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>